--- a/My game/Pig game.html
+++ b/My game/Pig game.html
@@ -13,7 +13,7 @@
     <body> 
         <section class='midbox'>
             <div id='inputBox'>
-            <input type="text" id="name" name="name" required
+            <input type="text" id="input" name="name" required
        minlength="2" maxlength="2" size="10"> </div>
            
             <button class='btn' id='newGame'> <i class="far fa-plus-square"></i>
@@ -34,7 +34,7 @@
                <div class= 'current-score' id= 'current-score-1'> 10 </div>
                </div>
 
-            <img src="/images/dice-4.png" alt='Dice' class='dice'>
+            <img src="./images/dice-4.png" alt='Dice' class='dice'>
             </div>    
         </section>
     </body>
